--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   z-index: 100;
   background: rgba(0, 0, 0, 0.7);
   padding: 20px;
+  padding-top: 5px;
   border-radius: 8px;
   color: white;
   backdrop-filter: blur(5px);
